Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15728

'relatime' is not working properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.12.7, Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      relatime behavior is properly managed by VFS, however Lustre also stores acmtime on OST objects and atime updates for OST objects should honor relatime behavior.

      ci_noatime feature was introduced by LU-3832 to properly honor noatime option for OST objects. However, the relatime management was not added at the same time, even if it uses the same function.

      relatime could be fixed adding the missing parts from touch_atime() to also support relatime.

            degremoa Aurelien Degremont (Inactive)
            degremoa Aurelien Degremont (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: